--- a/honeycomb.cabal
+++ b/honeycomb.cabal
@@ -15,13 +15,16 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Data.Apiary
+  exposed-modules:     Data.Json
                      , Network.Apiary
+                     , Search.DepthFirstSearch
   build-depends:       base >= 4.7 && < 5
                      , aeson >= 1.0
                      , wreq >= 0.4
                      , lens >= 4.0
                      , bytestring >= 0.10
+                     , unordered-containers >= 0.2
+                     , vector >= 0.11
   default-language:    Haskell2010
 
 executable honeycomb
@@ -34,6 +37,8 @@ executable honeycomb
                      , wreq >= 0.4
                      , lens >= 4.0
                      , bytestring >= 0.10
+                     , unordered-containers >= 0.2
+                     , vector >= 0.11
   default-language:    Haskell2010
 
 test-suite honeycomb-test
@@ -46,6 +51,8 @@ test-suite honeycomb-test
                      , wreq >= 0.4
                      , lens >= 4.0
                      , bytestring >= 0.10
+                     , unordered-containers >= 0.2
+                     , vector >= 0.11
                      , hspec
                      , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
