--- a/honeycomb.cabal
+++ b/honeycomb.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     Data.Json
                      , Network.Apiary
                      , Search.DepthFirstSearch
+                     , Data.ApiElement
   build-depends:       base >= 4.7 && < 5
                      , aeson >= 1.0
                      , wreq >= 0.4
@@ -25,6 +26,7 @@ library
                      , bytestring >= 0.10
                      , unordered-containers >= 0.2
                      , vector >= 0.11
+                     , text >= 1.2
   default-language:    Haskell2010
 
 executable honeycomb
@@ -39,6 +41,7 @@ executable honeycomb
                      , bytestring >= 0.10
                      , unordered-containers >= 0.2
                      , vector >= 0.11
+                     , text >= 1.2
   default-language:    Haskell2010
 
 test-suite honeycomb-test
@@ -53,6 +56,7 @@ test-suite honeycomb-test
                      , bytestring >= 0.10
                      , unordered-containers >= 0.2
                      , vector >= 0.11
+                     , text >= 1.2
                      , hspec
                      , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
