--- a/honeycomb.cabal
+++ b/honeycomb.cabal
@@ -19,6 +19,7 @@ library
                      , Network.Apiary
                      , Search.DepthFirstSearch
                      , Data.ApiElement
+                     , Language.Java.Lombok
   build-depends:       base >= 4.7 && < 5
                      , aeson >= 1.0
                      , wreq >= 0.4
@@ -27,6 +28,7 @@ library
                      , unordered-containers >= 0.2
                      , vector >= 0.11
                      , text >= 1.2
+                     , language-java >= 0.2
   default-language:    Haskell2010
 
 executable honeycomb
@@ -42,6 +44,7 @@ executable honeycomb
                      , unordered-containers >= 0.2
                      , vector >= 0.11
                      , text >= 1.2
+                     , language-java >= 0.2
   default-language:    Haskell2010
 
 test-suite honeycomb-test
@@ -57,6 +60,7 @@ test-suite honeycomb-test
                      , unordered-containers >= 0.2
                      , vector >= 0.11
                      , text >= 1.2
+                     , language-java >= 0.2
                      , hspec
                      , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
