--- a/stack.yaml
+++ b/stack.yaml
@@ -4,6 +4,7 @@ packages:
 - '.'
 extra-deps:
 - aeson-1.0.2.1
+- countable-inflections-0.2.0
 - cryptonite-0.21
 - foundation-0.0.2
 - hjsonpointer-1.1.0.0
