--- a/honeycomb.cabal
+++ b/honeycomb.cabal
@@ -19,7 +19,7 @@ library
                      , Network.Apiary
                      , Search.DepthFirstSearch
                      , Data.ApiElement
-                     , Language.Java
+                     , CodeGen.Java
   build-depends:       base >= 4.7 && < 5
                      , aeson >= 1.0
                      , wreq >= 0.4
